# toy-project

./: .coveragerc  .dockerignore  .gitignore  README.md  SECURITY.md  justfile  pyproject.toml  sonar-project.properties  test_config.py
.github/: codeql-config.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_report.md
.github/codeql/custom-queries/: fastapi-input-validation.ql  fastapi-missing-auth.ql  fastapi-path-traversal.ql  fastapi-sensitive-data-exposure.ql  fastapi-sql-injection.ql  qlpack.yml
.github/workflows/: README.md  ci.yml  code-quality.yml  dependency-update.yml  release.yml  security.yml
app/: config.py  main.py
app/models/: file.py  permissions.py
app/routes/: files.py  permissions.py
app/services/: file_service.py  permission_service.py
app/templates/: index.html
chroma/: chroma.sqlite3
docker/: Dockerfile  Dockerfile.prod  docker-compose.prod.yml  docker-compose.yml
infrastructure/docker/: docker-compose.bot-knowledge.yml  docker-compose.prod.yml  docker-compose.yml
infrastructure/scripts/: start-dev-containers.sh  start-prod-containers.sh
projects/bot-knowledge/: Dockerfile  Dockerfile.prod  README.md  justfile  pyproject.toml  setup.sh  test_locally.sh
projects/bot-knowledge/chroma/: chroma.sqlite3
projects/bot-knowledge/chroma_db/: chroma.sqlite3
projects/bot-knowledge/examples/: demo.py
projects/bot-knowledge/src/: main.py
projects/bot-knowledge/src/app/: config.py  database.py  main.py
projects/bot-knowledge/src/app/models/: __init__.py  document.py
projects/bot-knowledge/src/app/routes/: __init__.py  documents.py  health.py  ui.py
projects/bot-knowledge/src/app/services/: __init__.py  file_manager_client.py  vector_service.py
projects/bot-knowledge/src/app/static/css/: main.css  upload.css
projects/bot-knowledge/src/app/static/js/: api.js  documents.js  search.js  upload.js  utils.js
projects/bot-knowledge/src/app/templates/: base.html  dashboard.html  document_detail.html  documents.html  error.html  search.html  upload.html
projects/bot-knowledge/src/app/utils/: __init__.py  exceptions.py
projects/bot-knowledge/tests/: conftest.py  test_main.py
projects/bot-knowledge/tests/test_routes/: __init__.py  test_documents.py
projects/bot-knowledge/tests/test_services/: __init__.py  test_vector_service.py
projects/file-manager-api/: ONBOARDING_GUIDE.md  README.md  justfile  pyproject.toml
projects/file-manager-api/docker/: Dockerfile  Dockerfile.prod
projects/file-manager-api/src/app/: config.py  main.py
projects/file-manager-api/src/app/models/: file.py
projects/file-manager-api/src/app/services/: permission_service.py
projects/file-manager-api/src/app/static/js/: .gitkeep
projects/file-manager-api/src/app/utils/: file_utils.py
projects/file-manager-api/tests/: conftest.py  test_config.py  test_health_endpoint.py  test_hello.py  test_integration_syft_core.py  test_main.py  test_syft_core_mandatory.py  test_syft_url_generation.py
projects/file-manager-api/tests/performance/: __init__.py
projects/file-manager-api/tests/test_routes/: test_files.py  test_permissions.py
projects/file-manager-api/tests/test_services/: test_file_service.py
projects/llm-chat/: .dockerignore  Dockerfile  Dockerfile.prod  README.md  justfile  pyproject.toml
projects/llm-chat/src/: main.py
projects/llm-chat/src/api/routes/: chat.py  files.py
projects/llm-chat/src/core/: config.py  exceptions.py
projects/llm-chat/src/models/: chat.py
projects/llm-chat/src/services/: chat.py  file_manager_client.py  openai_client.py
projects/llm-chat/src/static/css/: style.css
projects/llm-chat/src/static/js/: chat.js
projects/llm-chat/src/templates/: base.html  chat.html
projects/llm-chat/tests/: conftest.py  test_main.py  test_models.py
projects/llm-chat/tests/api/: test_chat.py
projects/llm-chat/tests/services/: test_chat.py
projects/project-three/: README.md  justfile  pyproject.toml
projects/project-three/src/: main.py
projects/project-three/tests/: test_main.py
projects/project-two/: README.md  justfile  pyproject.toml
projects/project-two/src/: main.py
projects/project-two/tests/: test_main.py
shared/: README.md  __init__.py  pyproject.toml
shared/libs/common/: exceptions.py  logging.py
shared/utils/deployment/: __init__.py
shared/utils/testing/: __init__.py
simple-upload-page/: index.html
test/: test_environment_modes.py  test_health_endpoint.py  test_integration.py
test/performance/: __init__.py  locustfile.py
test/test_utils/: test_file_utils.py
test_files/: api_documentation.txt  config_example.txt  docker_guide.txt  sample1.txt  sample2.md
