[project]
name = "shared"
version = "0.1.0"
description = "Shared libraries and utilities for the monorepo"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["libs*", "utils*"]